# bratwurst-barometer

./: .gitignore  README.md  germany_temperature_plots.py  pyproject.toml
docs/: index.html  site.js  styles.css
docs/assets/: annual_temperature_metrics.csv  decade_temperature_metrics.csv  station_processing_summary.csv
outputs/: annual_temperature_metrics.csv  annual_temperature_metrics.json  decade_temperature_metrics.json  notes.md
scripts/: verify_outputs.py
src/wetter_analysis/: __init__.py  cli.py  config.py  data.py  download.py  metrics.py  notes.py  site.py  svg.py
