[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "germany-temperature-trends"
version = "0.1.0"
description = "Reproducible DWD-based Germany temperature trend plots and GitHub Pages site."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0"]

[project.scripts]
wetter-analysis = "wetter_analysis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
